--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "clsx": "^2.1.1",
     "jotai": "^2.12.1",
     "lucide-react": "^0.477.0",
+    "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0",
+    "sonner": "^2.0.1",
     "styled-components": "^6.1.15",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.10",
