--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-navigation-menu": "^1.2.5",
+    "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@tailwindcss/vite": "^4.0.12",
     "axios": "^1.8.1",
@@ -23,7 +24,9 @@
     "lucide-react": "^0.477.0",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
+    "react-background-video-player": "^1.1.8",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-jwt": "^1.2.2",
     "react-router-dom": "^7.3.0",
     "sonner": "^2.0.1",
