--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "axios": "^1.8.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.4.10",
     "jotai": "^2.12.1",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.477.0",
     "next-themes": "^0.4.4",
-    "react": "^19.0.0",
+    "react": "^18.3.1",
     "react-background-video-player": "^1.1.8",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-jwt": "^1.2.2",
     "react-router-dom": "^7.3.0",
@@ -37,9 +39,10 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.13.9",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.8.0",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
