--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "axios": "^1.8.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-autoplay": "^8.5.2",
+    "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.4.10",
     "jotai": "^2.12.1",
     "jsonwebtoken": "^9.0.2",
@@ -29,6 +31,7 @@
     "react-background-video-player": "^1.1.8",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
+    "react-image": "^4.1.0",
     "react-jwt": "^1.2.2",
     "react-router-dom": "^7.3.0",
     "sonner": "^2.0.1",
