add user settings components; implement EditUser and ChangePassword features; update context and session storage handling

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 VITE_BASE_URL="http://localhost:8000/api/v1"
+VITE_RECAPTCHA_SITE_KEY=6LfVCAErAAAAACX5aTQ82IpIxCBWyR6j1NIEd0CT
+SITE_SECRET=6LfVCAErAAAAAD9-vm8iZefHGe0878N-uAl6CM2E
