--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.3",
     "@tailwindcss/vite": "^4.0.12",
     "axios": "^1.8.1",
     "class-variance-authority": "^0.7.1",
@@ -35,6 +36,7 @@
     "react": "^18.3.1",
     "react-background-video-player": "^1.1.8",
     "react-dom": "^18.3.1",
+    "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.5.0",
     "react-image": "^4.1.0",
     "react-jwt": "^1.2.2",
@@ -51,6 +53,7 @@
     "@types/node": "^22.13.9",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-google-recaptcha": "^2.1.9",
     "@vitejs/plugin-react-swc": "^3.8.0",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
