--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cmdk": "^1.0.0",
     "embla-carousel-autoplay": "^8.5.2",
     "embla-carousel-react": "^8.5.2",
+    "formik": "^2.4.6",
     "framer-motion": "^12.4.10",
     "jotai": "^2.12.1",
     "jsonwebtoken": "^9.0.2",
@@ -41,11 +42,13 @@
     "react-image": "^4.1.0",
     "react-jwt": "^1.2.2",
     "react-router-dom": "^7.3.0",
+    "react-spinners": "^0.15.0",
     "sonner": "^2.0.1",
     "styled-components": "^6.1.15",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.12",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
