feat: add FormHistoria component and MapaInteractivo component with Google Maps integration

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@
 VITE_BASE_URL="http://127.0.0.1:8000/api/v1"
 VITE_RECAPTCHA_SITE_KEY=6LfVCAErAAAAACX5aTQ82IpIxCBWyR6j1NIEd0CT
 SITE_SECRET=6LfVCAErAAAAAD9-vm8iZefHGe0878N-uAl6CM2E
+VITE_BASE_MAPS_API_KEY=AIzaSyBtBcqUNBnaOKyv0bVHXWmpYq-dYkucjuk
