--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@react-google-maps/api": "^2.20.6",
     "@tailwindcss/vite": "^4.0.12",
     "axios": "^1.8.1",
     "class-variance-authority": "^0.7.1",
