--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 #VITE_BASE_URL="https://ee2f-190-129-164-251.ngrok-free.app/api/v1"
-VITE_BASE_URL="http://127.0.0.1:8000/api/v1"
+VITE_BASE_URL="https://devergheim.tenrec-kanyu.ts.net/api/v1"
 VITE_RECAPTCHA_SITE_KEY=6LfVCAErAAAAACX5aTQ82IpIxCBWyR6j1NIEd0CT
 SITE_SECRET=6LfVCAErAAAAAD9-vm8iZefHGe0878N-uAl6CM2E
 VITE_BASE_MAPS_API_KEY=AIzaSyBtBcqUNBnaOKyv0bVHXWmpYq-dYkucjuk
