--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/genai": "^0.14.0",
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-checkbox": "^1.2.2",
@@ -48,6 +49,7 @@
     "react-icons": "^5.5.0",
     "react-image": "^4.1.0",
     "react-jwt": "^1.2.2",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.3.0",
     "react-spinners": "^0.15.0",
     "sonner": "^2.0.1",
